alteracoes em arquivos

--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
           </div4> 
 
         <body>
-            <a href="Home.html" class="botao-voltar">
+            <a href="home.html" class="botao-voltar">
                 <img src="imagem/botao-voltar.png" alt="Voltar">
             </a>
         </body>
