--- a/pagina de compra.html
+++ b/pagina de compra.html
@@ -22,7 +22,7 @@
           </div4> 
 
         <body>
-            <a href="home.html" class="botao-voltar">
+            <a href="index.html" class="botao-voltar">
                 <img src="imagem/botao-voltar.png" alt="Voltar">
             </a>
         </body>
