--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div4> 
 
         <div5 class="silver02">
-            <a href="pagina de compra.html">
+            <a href="pagina-de-compra.html">
             <img class="image2" src="imagem/shopping-cart.png" alt="Carrinho">
             </a>
         </div5>
