--- a/pagina-de-compra.html
+++ b/pagina-de-compra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="pagina de comprar.css"> 
+    <link rel="stylesheet" type="text/css" href="pagina-de-comprar.css"> 
     <link rel="icon" type="image/x.icon" href="imagem/logo ammu.jpg"> 
     <title>Loja de Armas AMMU NATION</title>
     <script src="script.js"></script>
