--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
     </div1>
         <aside>
-            <a href="pagina de compra.html">
+            <a href="pagina-de-compra.html">
                 <img class="banner" src="imagem/arm 2.jpg" alt="Meu Banner">
             </a>
             <ul>
