--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="banner" src="imagem/arm 2.jpg" alt="Meu Banner">
             </a>
             <ul>
-                <li><a href="exercicio07.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="serviços.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
